bison/parser.output
Terminals unused in grammar

   TOKEN_EOF
   TOKEN_STRING
   TOKEN_ADD
   TOKEN_DQUOTE
   TOKEN_ERROR


Grammar

    0 $accept: program $end

    1 program: scopes

    2 scopes: scope
    3       | scope scopes

    4 scope: class
    5      | record

    6 class: TOKEN_CLASS TOKEN_ID inherit classbody

    7 classbody: TOKEN_LBRACKET stmts TOKEN_RBRACKET
    8          | TOKEN_SEMI

    9 stmts: stmts stmt
   10      | stmt

   11 stmt: type TOKEN_ID TOKEN_EQ TOKEN_NUMBER TOKEN_SEMI

   12 type: TOKEN_INT

   13 record: TOKEN_DEF id inherit TOKEN_SEMI

   14 id: TOKEN_ID

   15 inherit: TOKEN_COLON parents
   16        | %empty

   17 parents: parent TOKEN_COMMA parents
   18        | parent

   19 parent: TOKEN_ID


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN_EOF (258)
TOKEN_ID (259) 6 11 14 19
TOKEN_NUMBER (260) 11
TOKEN_DEF (261) 13
TOKEN_CLASS (262) 6
TOKEN_INT (263) 12
TOKEN_STRING (264)
TOKEN_SEMI (265) 8 11 13
TOKEN_COMMA (266) 17
TOKEN_EQ (267) 11
TOKEN_ADD (268)
TOKEN_DQUOTE (269)
TOKEN_COLON (270) 15
TOKEN_LBRACKET (271) 7
TOKEN_RBRACKET (272) 7
TOKEN_ERROR (273)


Nonterminals, with rules where they appear

$accept (19)
    on left: 0
program (20)
    on left: 1, on right: 0
scopes (21)
    on left: 2 3, on right: 1 3
scope (22)
    on left: 4 5, on right: 2 3
class (23)
    on left: 6, on right: 4
classbody (24)
    on left: 7 8, on right: 6
stmts (25)
    on left: 9 10, on right: 7 9
stmt (26)
    on left: 11, on right: 9 10
type (27)
    on left: 12, on right: 11
record (28)
    on left: 13, on right: 5
id (29)
    on left: 14, on right: 13
inherit (30)
    on left: 15 16, on right: 6 13
parents (31)
    on left: 17 18, on right: 15 17
parent (32)
    on left: 19, on right: 17 18


State 0

    0 $accept: . program $end

    TOKEN_DEF    shift, and go to state 1
    TOKEN_CLASS  shift, and go to state 2

    program  go to state 3
    scopes   go to state 4
    scope    go to state 5
    class    go to state 6
    record   go to state 7


State 1

   13 record: TOKEN_DEF . id inherit TOKEN_SEMI

    TOKEN_ID  shift, and go to state 8

    id  go to state 9


State 2

    6 class: TOKEN_CLASS . TOKEN_ID inherit classbody

    TOKEN_ID  shift, and go to state 10


State 3

    0 $accept: program . $end

    $end  shift, and go to state 11


State 4

    1 program: scopes .

    $default  reduce using rule 1 (program)


State 5

    2 scopes: scope .
    3       | scope . scopes

    TOKEN_DEF    shift, and go to state 1
    TOKEN_CLASS  shift, and go to state 2

    $default  reduce using rule 2 (scopes)

    scopes  go to state 12
    scope   go to state 5
    class   go to state 6
    record  go to state 7


State 6

    4 scope: class .

    $default  reduce using rule 4 (scope)


State 7

    5 scope: record .

    $default  reduce using rule 5 (scope)


State 8

   14 id: TOKEN_ID .

    $default  reduce using rule 14 (id)


State 9

   13 record: TOKEN_DEF id . inherit TOKEN_SEMI

    TOKEN_COLON  shift, and go to state 13

    $default  reduce using rule 16 (inherit)

    inherit  go to state 14


State 10

    6 class: TOKEN_CLASS TOKEN_ID . inherit classbody

    TOKEN_COLON  shift, and go to state 13

    $default  reduce using rule 16 (inherit)

    inherit  go to state 15


State 11

    0 $accept: program $end .

    $default  accept


State 12

    3 scopes: scope scopes .

    $default  reduce using rule 3 (scopes)


State 13

   15 inherit: TOKEN_COLON . parents

    TOKEN_ID  shift, and go to state 16

    parents  go to state 17
    parent   go to state 18


State 14

   13 record: TOKEN_DEF id inherit . TOKEN_SEMI

    TOKEN_SEMI  shift, and go to state 19


State 15

    6 class: TOKEN_CLASS TOKEN_ID inherit . classbody

    TOKEN_SEMI      shift, and go to state 20
    TOKEN_LBRACKET  shift, and go to state 21

    classbody  go to state 22


State 16

   19 parent: TOKEN_ID .

    $default  reduce using rule 19 (parent)


State 17

   15 inherit: TOKEN_COLON parents .

    $default  reduce using rule 15 (inherit)


State 18

   17 parents: parent . TOKEN_COMMA parents
   18        | parent .

    TOKEN_COMMA  shift, and go to state 23

    $default  reduce using rule 18 (parents)


State 19

   13 record: TOKEN_DEF id inherit TOKEN_SEMI .

    $default  reduce using rule 13 (record)


State 20

    8 classbody: TOKEN_SEMI .

    $default  reduce using rule 8 (classbody)


State 21

    7 classbody: TOKEN_LBRACKET . stmts TOKEN_RBRACKET

    TOKEN_INT  shift, and go to state 24

    stmts  go to state 25
    stmt   go to state 26
    type   go to state 27


State 22

    6 class: TOKEN_CLASS TOKEN_ID inherit classbody .

    $default  reduce using rule 6 (class)


State 23

   17 parents: parent TOKEN_COMMA . parents

    TOKEN_ID  shift, and go to state 16

    parents  go to state 28
    parent   go to state 18


State 24

   12 type: TOKEN_INT .

    $default  reduce using rule 12 (type)


State 25

    7 classbody: TOKEN_LBRACKET stmts . TOKEN_RBRACKET
    9 stmts: stmts . stmt

    TOKEN_INT       shift, and go to state 24
    TOKEN_RBRACKET  shift, and go to state 29

    stmt  go to state 30
    type  go to state 27


State 26

   10 stmts: stmt .

    $default  reduce using rule 10 (stmts)


State 27

   11 stmt: type . TOKEN_ID TOKEN_EQ TOKEN_NUMBER TOKEN_SEMI

    TOKEN_ID  shift, and go to state 31


State 28

   17 parents: parent TOKEN_COMMA parents .

    $default  reduce using rule 17 (parents)


State 29

    7 classbody: TOKEN_LBRACKET stmts TOKEN_RBRACKET .

    $default  reduce using rule 7 (classbody)


State 30

    9 stmts: stmts stmt .

    $default  reduce using rule 9 (stmts)


State 31

   11 stmt: type TOKEN_ID . TOKEN_EQ TOKEN_NUMBER TOKEN_SEMI

    TOKEN_EQ  shift, and go to state 32


State 32

   11 stmt: type TOKEN_ID TOKEN_EQ . TOKEN_NUMBER TOKEN_SEMI

    TOKEN_NUMBER  shift, and go to state 33


State 33

   11 stmt: type TOKEN_ID TOKEN_EQ TOKEN_NUMBER . TOKEN_SEMI

    TOKEN_SEMI  shift, and go to state 34


State 34

   11 stmt: type TOKEN_ID TOKEN_EQ TOKEN_NUMBER TOKEN_SEMI .

    $default  reduce using rule 11 (stmt)
